# Syngrapha

./: .dev.env  .env  .flake8  README.md  app.py  docker-compose-common.yml  docker-compose-monitoring.yml  docker-compose-services.yml  docker-compose.yml  domain.md  pyproject.toml  ruff.toml
backend/: .importlinter  README.md  alembic.ini  pyproject.toml
backend/http_tests/: auth.http  nalog_ext_test.http
backend/syngrapha/: config.py
backend/syngrapha/application/: identifier.py
backend/syngrapha/bootstrap/: app.py
backend/syngrapha/domain/: autocategorization.py  money.py  user.py  vo.py
backend/syngrapha/infrastructure/: ai_categorizer.py  ai_client.py  ddg_client.py  security.py  tasks.py
backend/syngrapha/utils/: decorator.py  func.py
frontend/: README.md  package-lock.json  package.json  radix-sidebar.json  readme.txt  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
frontend/src/api/: auth.ts  common.ts  profile.ts  transactions.ts
frontend/src/components/: LoaderIf.tsx  login-form-no-additionals.tsx  login-form.tsx
frontend/src/hooks/: auth.ts  language.ts  menu.ts  onboarding.ts  ready.ts  (+2 more)
loki/: config.yml
prometheus/: prometheus.yml
proverkacheka_proxy/: Dockerfile  app.py  parser.py  req.txt
proverkacheka_proxy/old/: Dockerfile  app.py  custom_logging.py  parser.py  req.txt
syngrapha/: config.py
syngrapha/bootstrap/: app.py
syngrapha/domain/: money.py
syngrapha/infrastructure/: ai_categorizer.py  identifier.py
syngrapha/utils/: coerce.py  func.py
vector/: vector.toml
(+122 files in other folders)
