[project]
name = "syngrapha"
version = "0.1.0"
description = ""
authors = [
    {name = "Tapeline",email = "mail@tapeline.dev"}
]
license = {text = "GNU GPL v3.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dishka (>=1.6.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "adaptix[sqlalchemy] (>=3.0.0b11,<4.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "litestar[pydantic,standard] (>=2.16.0,<3.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
wemake-python-styleguide = "^1.1.0"
mypy = "^1.16.0"

